--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://bla.com"
+baseURL = "https://marcdepalol.netlify.com"
 languageCode = "en-us"
 title = "Marc de Palol's notes"
 theme = "yinyang"
@@ -18,4 +18,4 @@ link = "https://twitter.com/lant"
 
 [[params.socials]]
 name = "About"
-link = "http://localhost:1313/about/"
+link = "https://marcdepalol.netlify.com/about/"
